--- a/profil.html
+++ b/profil.html
@@ -10,7 +10,7 @@
     <div class="profil">
         <header class="presentation">
             <img src="pofil.jpg" alt="photo de profil" class="photo_profil">
-            <h1>Edouard BASSOWOU</h1>
+            <h1>Anne ATTITSO</h1>
             <p>Lomé, Togo</p>
         </header>
         <section class="liens">
